--- a/event/app/views/dm_event/admin/workshops/financials.html.erb
+++ b/event/app/views/dm_event/admin/workshops/financials.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :content_title_extra do %>
   <%= page_header_buttons do %>
-    <%= link_to 'View Registrations', [:admin, @workshop], class: 'btn btn-xs btn-default' %>
+    <%= link_to 'View Registrations', [:admin, @workshop], class: 'btn btn-sm btn-default' %>
   <% end %>
 <% end %>
   
