--- a/core/app/views/dm_core/admin/accounts/_settings_menu.html.erb
+++ b/core/app/views/dm_core/admin/accounts/_settings_menu.html.erb
@@ -1,14 +1,9 @@
 <% unless @account.new_record? %>
   <%= content_for :content_title_extra do %>
-    <div class="visible-xs header-element-toggle">
-      <a class="btn btn-default btn-icon" data-toggle="collapse" data-target="#header-buttons"><i class="icon-cog"></i></a>
-    </div>
-    <div class="header-buttons">
-      <div class="collapse" id="header-buttons">
-        <div class="well">
-          <%= @account.preferred_site_enabled? ? colored_label('Site Published', :success) : colored_label('Site Disabled') %>
+    <%= page_header_buttons do %>
+        <%= @account.preferred_site_enabled? ? colored_label('Site Published', :success) : colored_label('Site Disabled') %>
           <div class="btn-group">
-            <button class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">Settings <span class="caret"></span></button>
+            <button class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown">Settings <span class="caret"></span></button>
             <ul class="dropdown-menu dropdown-menu-right icons-right">
               <li><%= link_to "General".html_safe, dm_core.admin_account_general_path %></li>
               <li><%= link_to "Site Wide".html_safe, dm_core.admin_account_metadata_path %></li>
@@ -17,8 +12,6 @@
               <li><%= link_to "Media".html_safe, dm_core.admin_account_media_path %></li>
             </ul>
           </div>
-        </div>
-      </div>
-    </div>
+    <% end %>
   <% end %>
 <% end %>
