--- a/event/app/views/dm_event/admin/workshops/permissions.html.erb
+++ b/event/app/views/dm_event/admin/workshops/permissions.html.erb
@@ -14,9 +14,9 @@
                 <% manage_event_state = user.has_role?(:manage_event, @workshop) ? 'btn-success active' : 'btn-default' %>
                 <% manage_event_registration_state = user.has_role?(:manage_event_registration, @workshop) ? 'btn-success active' : 'btn-default' %>
                 <% manage_event_finance_state = user.has_role?(:manage_event_finance, @workshop) ? 'btn-success active' : 'btn-default' %>
-                <%= link_to 'Workshop Editing',     dm_event.ajax_toggle_permission_admin_workshop_path(@workshop, user.id, :manage_event), class: "permission_btn btn btn-xs #{manage_event_state}", role: 'button', remote: true, method: :patch %>
-                <%= link_to 'Manage Registrations', dm_event.ajax_toggle_permission_admin_workshop_path(@workshop, user.id, :manage_event_registration), class: "permission_btn btn btn-xs #{manage_event_registration_state}", role: 'button', remote: true, method: :patch %>
-                <%= link_to 'View Finances',        dm_event.ajax_toggle_permission_admin_workshop_path(@workshop, user.id, :manage_event_finance), class: "permission_btn btn btn-xs #{manage_event_finance_state}", role: 'button', remote: true, method: :patch %>
+                <%= link_to 'Workshop Editing',     dm_event.ajax_toggle_permission_admin_workshop_path(@workshop, user.id, :manage_event), class: "permission_btn btn btn-sm #{manage_event_state}", role: 'button', remote: true, method: :patch %>
+                <%= link_to 'Manage Registrations', dm_event.ajax_toggle_permission_admin_workshop_path(@workshop, user.id, :manage_event_registration), class: "permission_btn btn btn-sm #{manage_event_registration_state}", role: 'button', remote: true, method: :patch %>
+                <%= link_to 'View Finances',        dm_event.ajax_toggle_permission_admin_workshop_path(@workshop, user.id, :manage_event_finance), class: "permission_btn btn btn-sm #{manage_event_finance_state}", role: 'button', remote: true, method: :patch %>
               <% end %>
             </div>
           </div>
@@ -26,12 +26,10 @@
     <% end %>
   </div>
   <div class="col-md-4">
-    <%= panel body: false, title: "Event Managers" do %>
-      <div class="panel-body">
-        <p>Current users that can fully manage this event</p>
-      </div>
+    <%= subsection title: "Event Managers" do %>
+      <p>Current users that can fully manage this event</p>
   
-      <table class="table table-bordered table-condensed table-striped">
+      <table class="table table-bordered table-bordered table-condensed table-striped">
         <tbody>
           <% @event_managers.each do |user| %>
             <tr>
