--- a/event/app/views/dm_event/admin/workshops/show.html.erb
+++ b/event/app/views/dm_event/admin/workshops/show.html.erb
@@ -36,7 +36,7 @@
     <% else %>
       <% title    = 'Registrations (only displaying personal registrations)' %>
     <% end %>
-    <%= panel title: title, toolbar: toolbar, body: false do %>
+    <%= panel title: title, toolbar: toolbar, body: true do %>
       <table id="registration_table" class="table table-striped table-bordered" data-source="<%= dm_event.admin_workshop_url(@workshop, duplicates: params[:duplicates]) %>">
         <thead>
           <tr>
