replaced remaining `icon-` with font awesome

--- a/cms/app/views/dm_cms/admin/cms_pages/show.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_pages/show.html.erb
@@ -47,7 +47,7 @@
         <dt class="text-info">Template</dt>
         <dd>
           <%= @current_page.page_template %>
-          <%= " #{icons('icon-arrow-up9', color: '#aaa')}".html_safe if @current_page.template.blank? %>
+          <%= " #{icons('fa fa-arrow-up', color: '#aaa')}".html_safe if @current_page.template.blank? %>
         </dd>
         <dt class="text-info">Link</dt>
         <dd><%= @current_page.link %></dd>
