--- a/cms/app/views/dm_cms/admin/cms_posts/_form.html.erb
+++ b/cms/app/views/dm_cms/admin/cms_posts/_form.html.erb
@@ -1,6 +1,6 @@
 <% unless @post.new_record? %>
   <% content_for :content_title, @post.title %>
-  <% content_for :content_subtitle, @blog.title %>
+  <% content_for :content_subtitle, 'Blog: '.html_safe + link_to(@blog.title, admin_cms_blog_path(@blog), title: 'Go back to this blog') %>
   <% content_for :content_title_extra do %>
     <%= page_header_buttons do %>
       <%= present(@post).label_published %>
@@ -15,6 +15,8 @@
           <% end %>
           <li><%= link_to 'Send Test Email', send_notifications_emails_admin_cms_blog_cms_post_path(@blog, @post, test: true), method: :put, data: {confirm: 'This will send a test post notification email to your email account.  Are you sure?'} %></li>
           <li><%= link_to 'Clear Facebook Cache', "https://developers.facebook.com/tools/debug/og/object?q=#{ERB::Util.url_encode(dm_cms.post_show_url(@post.cms_blog.slug, @post.slug))}", target: '_blank' %></li>            
+          <li class="divider"></li>
+          <li class="text-danger"><%= link_to icon_label(:delete, 'Delete Post', icon_class: 'text-danger', label_class: 'text-danger'), ([:admin, @blog, @post] unless @post.new_record?), method: :delete, class: 'text-danger', data: {confirm: 'Are you sure you wish to delete this post?  All comments will also be deleted!'} %></li>
         </ul>
       </div>
     <% end %>
@@ -24,36 +26,46 @@
 <% end %>
 
 <% submit_url = (@post.new_record? ? admin_cms_blog_cms_posts_path(@blog) : admin_cms_blog_cms_post_path(@blog, @post)) %>
-<%= simple_form_for @post, url: submit_url,
-    html: { class: 'form-horizontal' }, wrapper: :bs3_horizontal_form, wrapper_mappings: DmAdmin::FormWrapperMappings do |f| %>
+<%= simple_form_for @post, url: submit_url, wrapper: :bs3_vertical_form do |f| %>
 
-  <%= f.error_notification message: "Please review the problems below" %>
-  <% toolbar = capture do %>
-    <%= link_to icons(:help), '#', class: 'btn btn-xs btn-default', data: { toggle: 'modal', target: '#tag_reference' } %>
-    <%= link_to icons(:cancel), admin_cms_blog_path(@blog), class: 'btn btn-xs btn-default' %>
-  <% end %>
-  <%= panel title: icon_label(:edit, @post.new_record? ? 'Create Post' : 'Edit Post'), toolbar: toolbar do %>
-    <%= f.input :published_on, as: :datetime_picker, required: false, wrapper: :bs3_horizontal_nosize, 
-                label_html: {class: 'col-sm-2'}, input_wrapper_html: {class: 'col-sm-4'},
-                hint: 'Leave blank for DRAFT mode' %>
+  <div class="row">
+    <div class="col-md-8">
+      <% toolbar = capture do %>
+        <%= link_to icons(:help), '#', class: 'btn btn-xs btn-default', data: { toggle: 'modal', target: '#tag_reference' } %>
+      <% end %>
+      <%= panel title: icon_label(:edit, @post.new_record? ? 'Create Post' : 'Edit Post'), toolbar: toolbar do %>
+        <%= f.error_notification message: "Please review the problems below" %>
+        <%= locale_tabs do |locale| %>
+          <%= f.input "title_#{locale}",   label: 'Post Title', required: true %>
+          <%= f.input "summary_#{locale}", label: 'Summary',    required: true, wrapper: :bs3_vertical_form, as: :code_editor, autoheight: true, input_html: {class: "CodeMirror-autoheight"} %>
+          <%= f.input "content_#{locale}", label: 'Content',    required: true, wrapper: :bs3_vertical_form, as: :code_editor %>
+        <% end %>
 
-    <%= locale_tabs do |locale| %>
-      <%= f.input "title_#{locale}",   label: 'Post Title', required: true %>
-      <div class="col-sm-12">
-        <%= f.input "summary_#{locale}", label: 'Summary',    required: true, wrapper: :bs3_vertical_form, as: :code_editor, input_html: {style: "height: 100px;"} %>
-      </div>
-      <div class="col-sm-12">
-        <%= f.input "content_#{locale}", label: 'Content',    required: true, wrapper: :bs3_vertical_form, as: :code_editor, input_html: {style: "height: 500px;"} %>
-      </div>
-    <% end %>
+        <%= f.input :slug, label: 'Slug', hint: 'Leave blank to have auto-generated based on title.' %>
+        <%= f.input :comments_allowed, as: :boolean, label: 'Allow Comments', inline_label: 'Enable commenting for this post' %>
+      <% end %>
+    </div>
+    <div class="col-md-4">
+      <%= panel title: icon_label(:calendar, 'Publish') do %>
+        <%= f.input :published_on, as: :datetime_picker, required: false, hint: 'Leave blank for DRAFT mode' %>
+      <% end %>
 
-    <%= f.input :slug, label: 'Slug', hint: 'Leave blank to have auto-generated based on title.' %>
-    <%= f.input :featured_image, label: 'Featured Image', id: 'image_error' %>
-    <%= f.input :comments_allowed, as: :boolean, label: 'Allow Comments', hint: 'Turn on if you want commenting for this post.' %>
+      <%= submit_or_cancel save: @post.new_record? ? 'Create' : 'Update', cancel_url: admin_cms_blog_path(@blog) %>
+      <hr>
 
-    <%= submit_or_cancel cancel_url: admin_cms_blog_path(@blog), delete_url: ([:admin, @blog, @post] unless @post.new_record?), delete_confirm: 'Are you sure you wish to delete this post?  All comments will also be deleted!' %>
+      <%= panel title: icon_label(:tags, 'Tags') do %>
+        <%= f.input :tag_list, collection: CmsPost.tag_list_all, input_html: {multiple: '1', class: 'tag_field', } %>
+      <% end %>
 
-  <% end %>
+      <%= panel title: icon_label(:image, 'Featured Image') do %>
+        <% if @post.featured_image.present? %>
+          <img src="<%= site_asset_media_url(@post.featured_image) %>" class="img-thumbnail img-responsive">
+          <hr>
+        <% end %>
+        <%= f.input :featured_image, label: 'Specify an image', id: 'image_error', hint: 'When the theme supports it, the image is displayed in the post, usually at the top.  The image will also be used when sharing to Facebook, etc.' %>
+      <% end %>
+    </div>
+  </div>
 <% end %>
 
 <%= render partial: 'dm_cms/admin/shared/liquid_tags_ref' %>
